# test_ci

./: .gitignore  CMakeLists.txt  file1.py  main.c
.github/workflows/: custom_workflow.yml  superlinter.yml  workflow.yml
src/: CMakeLists.txt  func.c  func.h
tests/: CMakeLists.txt  test1.cpp
